--- a/my protfilo 2.html
+++ b/my protfilo 2.html
@@ -411,7 +411,7 @@
           <p class="project-desc">My PortPholio Website Created By Me & My Friend Pawan 😘 With Love ❤️!</p>
         </article>
         <article tabindex="0" class="project-card" role="article" aria-label="Project Two">
-          <h4 class="project-title">AR Task Master</h4>
+          <h4 class="project-title">Gaurav Gauro</h4>
           <p class="project-desc">An augmented reality task manager with holographic UX and AI integration.</p>
         </article>
         <article tabindex="0" class="project-card" role="article" aria-label="Project Three">
