--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
       <nav class="contact-links" role="list" aria-label="Social media links">
         <a href="#" aria-label="LinkedIn Profile" target="_blank" rel="noopener">LinkedIn</a>
         <a href="#" aria-label="GitHub Profile" target="_blank" rel="noopener">GitHub</a>
-        <a href="#" aria-label="Twitter Profile" target="_blank" rel="noopener">Twitter</a>
+        <a href="https://www.facebook.com/gaurab.gauro" aria-label="Facebook Profile" target="_blank" rel="noopener">Facebook</a>
       </nav>
     </section>
   </main>
